<resources>
    <string name="app_name">NUMAD22Fa_JiazheChen</string>
    <string name="hello">HELLO WORLD!</string>
    <string name="about_me">ABOUT ME</string>
    <string name="about_me_text">Jiazhe Chen\nchen.jiazhe@northeastern.edu</string>
    <string name="clicky_clicky">CLICKY CLICKY</string>
    <string name="clicky_a">A</string>
    <string name="clicky_b">B</string>
    <string name="clicky_c">C</string>
    <string name="clicky_d">D</string>
    <string name="clicky_e">E</string>
    <string name="clicky_f">F</string>
    <string name="press_text">Pressed: - </string>
    <string name="press_a">Pressed: A </string>
    <string name="press_b">Pressed: B </string>
    <string name="press_c">Pressed: C </string>
    <string name="press_d">Pressed: D </string>
    <string name="press_e">Pressed: E </string>
    <string name="press_f">Pressed: F </string>
    <string name="link_collector">LINK COLLECTOR</string>
    <string name="input">INPUT</string>
    <string name="submit">SUBMIT</string>
    <string name="url_hint">URL (www.google.com)</string>
    <string name="name_hint">Name (Google)</string>
    <string name="prime_finder">PRIME FINDER</string>
    <string name="prime_text">Last Prime Number: -\nNow Checking: -</string>
    <string name="find_primes">FIND PRIMES</string>
    <string name="terminate_search">TERMINATE SEARCH</string>
    <string name="pacifier_switch">PACIFIER SWITCH</string>
    <string name="location">LOCATION</string>
    <string name="location_text">Latitude: -\nLongitude: -\nTotal Distance: -</string>
    <string name="reset_distance">RESET</string>
</resources>