<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClickyClickyActivity">

    <TextView
        android:id="@+id/pressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:text="@string/press_text"
        app:layout_constraintTop_toBottomOf="@+id/eButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/aButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:onClick="onClick"
        android:text="@string/clicky_a"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/dButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bButton"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/bButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/clicky_b"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/eButton"
        app:layout_constraintStart_toEndOf="@+id/aButton"
        app:layout_constraintEnd_toStartOf="@+id/cButton"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/cButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:onClick="onClick"
        android:text="@string/clicky_c"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fButton"
        app:layout_constraintStart_toEndOf="@+id/bButton"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/dButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:onClick="onClick"
        android:text="@string/clicky_d"
        app:layout_constraintTop_toBottomOf="@+id/aButton"
        app:layout_constraintBottom_toTopOf="@+id/pressTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/eButton"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/eButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/clicky_e"
        app:layout_constraintTop_toBottomOf="@+id/bButton"
        app:layout_constraintBottom_toTopOf="@+id/pressTextView"
        app:layout_constraintStart_toEndOf="@+id/dButton"
        app:layout_constraintEnd_toStartOf="@+id/fButton"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/fButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:onClick="onClick"
        android:text="@string/clicky_f"
        app:layout_constraintTop_toBottomOf="@+id/cButton"
        app:layout_constraintBottom_toTopOf="@+id/pressTextView"
        app:layout_constraintStart_toEndOf="@+id/eButton"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>